--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/posterImageView"
         android:layout_width="120dp"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:contentDescription="@null"
